--- a/research/index.html
+++ b/research/index.html
@@ -203,7 +203,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
 
 
-<h2 class="wp-block-heading">Adverserial Multi-Agent Systems</h2>
+<h2 class="wp-block-heading">Adversarial Multi-Agent Systems</h2>
 
 
 
