--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
 
 <div class="wp-block-buttons is-content-justification-center is-layout-flex wp-container-core-buttons-is-layout-1 wp-block-buttons-is-layout-flex">
-<div class="wp-block-button has-custom-font-size is-style-outline is-style-outline--1" style="font-size:13px"><a class="wp-block-button__link wp-element-button" href="https://drive-lab-cmu.github.io/">Homepage</a></div>
+<div class="wp-block-button has-custom-font-size is-style-outline is-style-outline--1" style="font-size:13px"><a class="wp-block-button__link wp-element-button" href="https://drive-lab-cmu.github.io/">Home</a></div>
 
 
 
